Update README and Add tutorials

--- a/examples/checks/evaluate_guideline_adherence.ipynb
+++ b/examples/checks/evaluate_guideline_adherence.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bf292449-f9df-4e0f-912a-1a3fdedc19f1",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f2291e1a-389b-472d-8fb3-5aa49f1fee37",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d15fb087-3ed2-442f-9b23-35c7dbc6128e",
    "metadata": {},
    "outputs": [
@@ -107,15 +107,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-12-18 19:12:15.971\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
+      "\u001b[32m2023-12-19 16:32:31.633\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-12-18 19:12:17.092\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n",
-      "\u001b[32m2023-12-18 19:12:17.809\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
+      "\u001b[32m2023-12-19 16:32:42.463\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n",
+      "\u001b[32m2023-12-19 16:32:53.554\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0a950849-0348-450f-add0-cea2c1423525",
    "metadata": {},
    "outputs": [
@@ -142,14 +142,14 @@
       "   {\n",
       "      \"question\": \"Which is the most popular global sport?\",\n",
       "      \"response\": \"Football is the most popular sport with around 4 billion followers worldwide.\",\n",
-      "      \"score_No Numbers_adherence\": null,\n",
-      "      \"explanation_No Numbers_adherence\": null\n",
+      "      \"score_No Numbers_adherence\": 1.0,\n",
+      "      \"explanation_No Numbers_adherence\": \"Argument for option A (The given guideline is strictly adhered to):\\n1. The guideline states that the response should not contain any specific numbers or pricing-related information.\\n2. The response provided does not contain any specific numbers or pricing-related information.\\n3. The response only states that football is the most popular sport worldwide, without providing any numerical data or pricing information.\\n4. Therefore, the response adheres to the guideline.\\n\\nArgument for option B (The given guideline is strictly violated):\\n1. The guideline explicitly states that the response should not contain any specific numbers or pricing-related information.\\n2. The response provided includes the statement \\\"around 4 billion followers worldwide,\\\" which is a specific number.\\n3. This specific number violates the guideline as it provides a quantification of the popularity of football.\\n4. Therefore, the response violates the guideline.\\n\\nJudgement:\\nBased on the arguments presented, it can be concluded that the ML model-generated response violates the given guideline. The specific number mentioned in the response (\\\"around 4 billion followers worldwide\\\") is pricing-related information and goes against the guideline's instruction to avoid such information. Therefore, the correct answer is B (The given guideline is strictly violated).\\n\\n1.0\\n1.0\"\n",
       "   },\n",
       "   {\n",
       "      \"question\": \"How to install UpTrain?\",\n",
       "      \"response\": \"You can install UpTrain by running - pip install uptrain.\",\n",
-      "      \"score_No Numbers_adherence\": null,\n",
-      "      \"explanation_No Numbers_adherence\": null\n",
+      "      \"score_No Numbers_adherence\": 1.0,\n",
+      "      \"explanation_No Numbers_adherence\": \"The given guideline states that the response should not contain any specific numbers or pricing-related information. \\n\\nLooking at the provided question-answer pair:\\n[Question]: How to install UpTrain?\\n[Response]: You can install UpTrain by running - pip install uptrain.\\n\\nThe response provided does not contain any specific numbers or pricing-related information. It simply provides the command to install UpTrain using pip. Therefore, it adheres to the given guideline.\\n\\nArguments for option A (The given guideline is strictly adhered to):\\n1. The response does not contain any specific numbers or pricing-related information.\\n2. The response only provides the necessary command to install UpTrain.\\n\\nArguments for option B (The given guideline is strictly violated):\\n1. None of the arguments support the violation of the guideline.\\n\\nBased on the reasoning provided, it can be concluded that the given guideline is strictly adhered to.\\n\\n1.0\\n1.0\"\n",
       "   }\n",
       "]\n"
      ]
