--- a/examples/checks/evaluate_response_conciseness.ipynb
+++ b/examples/checks/evaluate_response_conciseness.ipynb
@@ -60,6 +60,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "OPENAI_API_KEY = os.environ.get(\"OPENAI_API_KEY\", None)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "11a472a8",
    "metadata": {},
    "outputs": [],
@@ -76,22 +87,22 @@
     "good_data = [\n",
     "    {\n",
     "        \"question\": \"What are the primary components of a cell?\",\n",
-    "        \"response\": \"A cell typically consists of a cell membrane, cytoplasm, and a nucleus. The cell membrane encloses the cell and regulates the passage of substances in and out. The cytoplasm contains organelles and other cellular structures, while the nucleus houses the genetic material.\"\n",
+    "        \"response\": \"A cell comprises a cell membrane, cytoplasm, and nucleus. The cell membrane regulates substance passage, the cytoplasm contains organelles, and the nucleus houses genetic material.\"\n",
     "    },\n",
     "    {\n",
     "        \"question\": \"How does photosynthesis work?\",\n",
-    "        \"response\": \"Photosynthesis is the process by which plants, algae, and some bacteria convert light energy into chemical energy. It involves the absorption of sunlight by chlorophyll, which is used to synthesize glucose from carbon dioxide and water. Oxygen is released as a byproduct.\"\n",
+    "        \"response\": \"Photosynthesis converts light energy into chemical energy in plants, algae, and some bacteria. Chlorophyll absorbs sunlight, synthesizing glucose from carbon dioxide and water, with oxygen released as a byproduct.\"\n",
     "    },\n",
     "    {\n",
     "        \"question\": \"What are the key features of the Python programming language?\",\n",
-    "        \"response\": \"Python is a high-level, interpreted programming language known for its readability and simplicity. It supports object-oriented, imperative, and functional programming paradigms. Python has a large standard library, dynamic typing, and automatic memory management.\"\n",
+    "        \"response\": \"Python is a high-level, interpreted language known for readability. It supports object-oriented, imperative, and functional programming with a large standard library, dynamic typing, and automatic memory management.\"\n",
     "    }\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "d15fb087-3ed2-442f-9b23-35c7dbc6128e",
    "metadata": {},
    "outputs": [
@@ -99,15 +110,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-12-18 19:51:46.232\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
+      "\u001b[32m2023-12-19 16:31:19.181\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-12-18 19:51:52.596\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n",
-      "\u001b[32m2023-12-18 19:51:53.409\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
+      "\u001b[32m2023-12-19 16:31:28.810\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n",
+      "\u001b[32m2023-12-19 16:31:36.472\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
      ]
     }
    ],
@@ -122,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "0a950849-0348-450f-add0-cea2c1423525",
    "metadata": {},
    "outputs": [
@@ -133,21 +144,21 @@
       "[\n",
       "   {\n",
       "      \"question\": \"What are the primary components of a cell?\",\n",
-      "      \"response\": \"A cell typically consists of a cell membrane, cytoplasm, and a nucleus. The cell membrane encloses the cell and regulates the passage of substances in and out. The cytoplasm contains organelles and other cellular structures, while the nucleus houses the genetic material.\",\n",
-      "      \"score_response_conciseness\": null,\n",
-      "      \"explanation_response_conciseness\": null\n",
+      "      \"response\": \"A cell comprises a cell membrane, cytoplasm, and nucleus. The cell membrane regulates substance passage, the cytoplasm contains organelles, and the nucleus houses genetic material.\",\n",
+      "      \"score_response_conciseness\": 1.0,\n",
+      "      \"explanation_response_conciseness\": \"1. The question asks for the primary components of a cell.\\n2. The provided response states that a cell comprises a cell membrane, cytoplasm, and nucleus.\\n3. The response then goes on to provide additional information about the functions of each component.\\n4. The additional information about the functions of each component is relevant and directly related to the primary components of a cell.\\n5. Therefore, the generated answer has no additional irrelevant information.\\n\\nScore: 1.0\\n1.0\"\n",
       "   },\n",
       "   {\n",
       "      \"question\": \"How does photosynthesis work?\",\n",
-      "      \"response\": \"Photosynthesis is the process by which plants, algae, and some bacteria convert light energy into chemical energy. It involves the absorption of sunlight by chlorophyll, which is used to synthesize glucose from carbon dioxide and water. Oxygen is released as a byproduct.\",\n",
-      "      \"score_response_conciseness\": null,\n",
-      "      \"explanation_response_conciseness\": null\n",
+      "      \"response\": \"Photosynthesis converts light energy into chemical energy in plants, algae, and some bacteria. Chlorophyll absorbs sunlight, synthesizing glucose from carbon dioxide and water, with oxygen released as a byproduct.\",\n",
+      "      \"score_response_conciseness\": 1.0,\n",
+      "      \"explanation_response_conciseness\": \"1. Read the question: \\\"How does photosynthesis work?\\\"\\n2. Read the response: \\\"Photosynthesis converts light energy into chemical energy in plants, algae, and some bacteria. Chlorophyll absorbs sunlight, synthesizing glucose from carbon dioxide and water, with oxygen released as a byproduct.\\\"\\n3. Compare the response to the question to determine if there is any additional irrelevant information.\\n4. The response provides a clear and concise explanation of how photosynthesis works, without any additional irrelevant information.\\n5. The response directly addresses the question and does not include any unrelated or unnecessary details.\\n6. Therefore, the generated answer has no additional irrelevant information.\\n\\nThe correct answer is C: The generated answer has no additional irrelevant information.\\n1.0\\n1.0\"\n",
       "   },\n",
       "   {\n",
       "      \"question\": \"What are the key features of the Python programming language?\",\n",
-      "      \"response\": \"Python is a high-level, interpreted programming language known for its readability and simplicity. It supports object-oriented, imperative, and functional programming paradigms. Python has a large standard library, dynamic typing, and automatic memory management.\",\n",
-      "      \"score_response_conciseness\": null,\n",
-      "      \"explanation_response_conciseness\": null\n",
+      "      \"response\": \"Python is a high-level, interpreted language known for readability. It supports object-oriented, imperative, and functional programming with a large standard library, dynamic typing, and automatic memory management.\",\n",
+      "      \"score_response_conciseness\": 1.0,\n",
+      "      \"explanation_response_conciseness\": \"1. The question asks for the key features of the Python programming language.\\n2. The response begins by stating that Python is a high-level, interpreted language known for readability. This is relevant information as it describes one of the key features of Python.\\n3. The response then mentions that Python supports object-oriented, imperative, and functional programming. This is also relevant information as it describes another key feature of Python.\\n4. The response further states that Python has a large standard library, dynamic typing, and automatic memory management. These are additional key features of Python.\\n5. The response does not contain any irrelevant information. All the information provided is directly related to the key features of the Python programming language.\\n\\nBased on the above reasoning, the correct answer is:\\n\\nC. The generated answer has no additional irrelevant information.\\n\\nScore: 1.0\"\n",
       "   }\n",
       "]\n"
      ]
@@ -166,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,22 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-12-18 19:51:54.201\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
+      "\u001b[32m2023-12-19 16:28:15.094\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-12-18 19:52:00.476\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n",
-      "\u001b[32m2023-12-18 19:52:01.115\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
+      "\u001b[32m2023-12-19 16:28:22.460\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n",
+      "\u001b[32m2023-12-19 16:28:28.708\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
      ]
     }
    ],
@@ -218,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,20 +240,20 @@
       "   {\n",
       "      \"question\": \"What are the primary components of a cell?\",\n",
       "      \"response\": \"The primary components of a cell are crucial for its function. Speaking of components, the integration of software components in modern applications is a key challenge for developers. It requires careful consideration of architectural patterns and design principles.\",\n",
-      "      \"score_response_conciseness\": null,\n",
-      "      \"explanation_response_conciseness\": null\n",
+      "      \"score_response_conciseness\": 0.0,\n",
+      "      \"explanation_response_conciseness\": \"1. The question asks for the primary components of a cell.\\n2. The response starts by acknowledging that the primary components of a cell are crucial for its function, which is relevant.\\n3. However, the response then goes on to talk about the integration of software components in modern applications, architectural patterns, and design principles, which are not relevant to the question about the primary components of a cell.\\n4. Therefore, the generated answer has additional irrelevant information.\\n\\nThe correct answer is A. The generated answer has a lot of additional irrelevant information.\\n0.0\\n0.0\"\n",
       "   },\n",
       "   {\n",
       "      \"question\": \"How does photosynthesis work?\",\n",
       "      \"response\": \"Photosynthesis is a fascinating process in biology. By the way, the implementation of photosynthesis algorithms in computer science for optimizing energy consumption in algorithms is an intriguing area of research. It involves mathematical modeling and algorithmic efficiency.\",\n",
-      "      \"score_response_conciseness\": null,\n",
-      "      \"explanation_response_conciseness\": null\n",
+      "      \"score_response_conciseness\": 0.0,\n",
+      "      \"explanation_response_conciseness\": \"1. The question asks about how photosynthesis works.\\n2. The response starts by acknowledging that photosynthesis is a fascinating process in biology, which is relevant to the question.\\n3. The response then goes on to mention the implementation of photosynthesis algorithms in computer science for optimizing energy consumption in algorithms, which is not directly related to how photosynthesis works.\\n4. The response further mentions mathematical modeling and algorithmic efficiency, which are also not directly related to how photosynthesis works.\\n5. Therefore, the response contains additional irrelevant information.\\n\\nThe generated answer has a lot of additional irrelevant information.\\n0.0\"\n",
       "   },\n",
       "   {\n",
       "      \"question\": \"What are the key features of the Python programming language?\",\n",
       "      \"response\": \"Python, as a programming language, is known for its simplicity and readability. Speaking of readability, the importance of clear and concise technical documentation in software development cannot be overstated. It enhances collaboration among team members and ensures the maintainability of codebases over time.\",\n",
-      "      \"score_response_conciseness\": null,\n",
-      "      \"explanation_response_conciseness\": null\n",
+      "      \"score_response_conciseness\": 0.0,\n",
+      "      \"explanation_response_conciseness\": \"1. The question asks for the key features of the Python programming language.\\n2. The response starts by mentioning that Python is known for its simplicity and readability, which is relevant to the question.\\n3. However, the response then goes on to talk about the importance of clear and concise technical documentation in software development, which is not directly related to the key features of Python.\\n4. Therefore, the generated answer has additional irrelevant information.\\n\\nThe correct answer is A. The generated answer has a lot of additional irrelevant information.\\n0.0\\n0.0\"\n",
       "   }\n",
       "]\n"
      ]
