--- a/examples/checks/evaluate_cosine_similarity.ipynb
+++ b/examples/checks/evaluate_cosine_similarity.ipynb
@@ -36,7 +36,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Create an API Key\n",
+        "#### Create an API Key\n",
         "\n",
         "To get started, you will first need to get your API key from the [Uptrain Website](https://uptrain.ai/dashboard).\n",
         "\n",
@@ -45,7 +45,7 @@
         "3. Copy the API key and save it somewhere safe\n",
         "\n",
         "\n",
-        "### Install the Uptrain Python Package"
+        "#### Install the Uptrain Python Package"
       ]
     },
     {
@@ -149,72 +149,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "{'name': 'qna-checkset',\n",
-              " 'config': {'source': {'op_name': 'uptrain.operators.io.base:JsonReader',\n",
-              "   'params': {'fpath': '/home/insatanic/_MyFolders/uptrain/uptrain-v1/examples/checks/qna-notebook-data.jsonl',\n",
-              "    'batch_size': None}},\n",
-              "  'preprocessors': [],\n",
-              "  'checks': [{'name': 'hallucination_check',\n",
-              "    'operators': [{'op_name': 'uptrain.operators.language.rouge:RougeScore',\n",
-              "      'params': {'score_type': 'precision',\n",
-              "       'col_in_generated': 'response',\n",
-              "       'col_in_source': 'document_text',\n",
-              "       'col_out': 'hallucination-score'}}],\n",
-              "    'plots': [{'op_name': 'uptrain.operators.chart:Histogram',\n",
-              "      'params': {'props': {'x': 'hallucination-score', 'nbins': 20},\n",
-              "       'title': '',\n",
-              "       'x': '',\n",
-              "       'y': '',\n",
-              "       'color': '',\n",
-              "       'description': '',\n",
-              "       'nbins': 20,\n",
-              "       'kind': 'histogram'}}]},\n",
-              "   {'name': 'similarity_check',\n",
-              "    'operators': [{'op_name': 'uptrain.operators.similarity:CosineSimilarity',\n",
-              "      'params': {'col_in_vector_1': 'question_embeddings',\n",
-              "       'col_in_vector_2': 'context_embeddings',\n",
-              "       'col_out': 'similarity-question-context'}}],\n",
-              "    'plots': [{'op_name': 'uptrain.operators.chart:Histogram',\n",
-              "      'params': {'props': {'x': 'similarity-question-context', 'nbins': 20},\n",
-              "       'title': '',\n",
-              "       'x': '',\n",
-              "       'y': '',\n",
-              "       'color': '',\n",
-              "       'description': '',\n",
-              "       'nbins': 20,\n",
-              "       'kind': 'histogram'}}]}],\n",
-              "  'postprocessors': []},\n",
-              " 'settings': {'logs_folder': '/tmp/uptrain-logs',\n",
-              "  'cohere_api_key': 'xMybsNQgwu55qZnpN3l8DKLYvyAsj0UWKW6QgrC9',\n",
-              "  'huggingface_api_key': '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',\n",
-              "  'replicate_api_token': None,\n",
-              "  'azure_api_key': None,\n",
-              "  'azure_api_base': None,\n",
-              "  'azure_api_version': None,\n",
-              "  'rpm_limit': 100,\n",
-              "  'tpm_limit': 90000,\n",
-              "  'embedding_compute_method': 'local',\n",
-              "  'uptrain_access_token': 'up-93de3cc6180540f6a02321eacbc66cd8',\n",
-              "  'uptrain_server_url': 'https://demo.uptrain.ai',\n",
-              "  'embedding_model_url': None,\n",
-              "  'embedding_model_api_token': None,\n",
-              "  'model': 'gpt-3.5-turbo-1106',\n",
-              "  'seed': None,\n",
-              "  'response_format': None},\n",
-              " 'version': 3}"
-            ]
-          },
-          "execution_count": 19,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "from uptrain.framework import Check, CheckSet\n",
         "from uptrain.operators import CosineSimilarity, JsonReader, Histogram, RougeScore\n",
