--- a/examples/checks/evaluate_model_grade_score.ipynb
+++ b/examples/checks/evaluate_model_grade_score.ipynb
@@ -31,57 +31,25 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "#### Install the UpTrain Python Package"
+                "#### Create an API Key\n",
+                "\n",
+                "To get started, you will first need to get your API key from the [Uptrain Website](https://uptrain.ai/dashboard).\n",
+                "\n",
+                "1. Login with Google\n",
+                "2. Click on \"Create API Key\"\n",
+                "3. Copy the API key and save it somewhere safe\n",
+                "\n",
+                "\n",
+                "#### Install the Uptrain Python Package"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
-            "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Requirement already satisfied: uptrain in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (0.4.2)\n",
-                        "Requirement already satisfied: plotly>=5.0.0 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages/plotly-5.15.0-py3.10.egg (from uptrain) (5.15.0)\n",
-                        "Requirement already satisfied: lazy-loader in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages/lazy_loader-0.3-py3.10.egg (from uptrain) (0.3)\n",
-                        "Requirement already satisfied: networkx in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages/networkx-3.1-py3.10.egg (from uptrain) (3.1)\n",
-                        "Requirement already satisfied: polars>=0.18 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages/polars-0.18.4-py3.10-linux-x86_64.egg (from uptrain) (0.18.4)\n",
-                        "Requirement already satisfied: httpx>=0.24.1 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from uptrain) (0.25.2)\n",
-                        "Requirement already satisfied: pandas in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages/pandas-2.0.3-py3.10-linux-x86_64.egg (from uptrain) (2.0.3)\n",
-                        "Requirement already satisfied: pydantic<1.10.10 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from uptrain) (1.10.9)\n",
-                        "Requirement already satisfied: numpy>=1.23.0 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from uptrain) (1.24.3)\n",
-                        "Requirement already satisfied: loguru in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages/loguru-0.7.0-py3.10.egg (from uptrain) (0.7.0)\n",
-                        "Requirement already satisfied: certifi in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from httpx>=0.24.1->uptrain) (2023.11.17)\n",
-                        "Requirement already satisfied: httpcore==1.* in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from httpx>=0.24.1->uptrain) (1.0.2)\n",
-                        "Requirement already satisfied: idna in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from httpx>=0.24.1->uptrain) (3.4)\n",
-                        "Requirement already satisfied: anyio in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from httpx>=0.24.1->uptrain) (3.7.0)\n",
-                        "Requirement already satisfied: sniffio in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from httpx>=0.24.1->uptrain) (1.3.0)\n",
-                        "Requirement already satisfied: h11<0.15,>=0.13 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from httpcore==1.*->httpx>=0.24.1->uptrain) (0.14.0)\n",
-                        "Requirement already satisfied: packaging in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from plotly>=5.0.0->uptrain) (23.2)\n",
-                        "Requirement already satisfied: tenacity>=6.2.0 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages/tenacity-8.2.2-py3.10.egg (from plotly>=5.0.0->uptrain) (8.2.2)\n",
-                        "Requirement already satisfied: typing-extensions>=4.2.0 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages/typing_extensions-4.7.1-py3.10.egg (from pydantic<1.10.10->uptrain) (4.7.1)\n",
-                        "Requirement already satisfied: python-dateutil>=2.8.2 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages/python_dateutil-2.8.2-py3.10.egg (from pandas->uptrain) (2.8.2)\n",
-                        "Requirement already satisfied: pytz>=2020.1 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from pandas->uptrain) (2023.3)\n",
-                        "Requirement already satisfied: tzdata>=2022.1 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from pandas->uptrain) (2023.3)\n",
-                        "Requirement already satisfied: six>=1.5 in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas->uptrain) (1.16.0)\n",
-                        "Requirement already satisfied: exceptiongroup in /home/insatanic/_MyFolders/uptrain/uptrain-v1/.venv/lib/python3.10/site-packages (from anyio->httpx>=0.24.1->uptrain) (1.1.2)\n"
-                    ]
-                }
-            ],
-            "source": [
-                "!pip install uptrain"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
-                "import os\n",
-                "YOUR_API_KEY = os.environ[\"UPTRAIN_API_KEY\"]"
+                "!pip install uptrain"
             ]
         },
         {
@@ -176,54 +144,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "{'name': 'qna-checkset',\n",
-                            " 'config': {'source': {'op_name': 'uptrain.operators.io.base:JsonReader',\n",
-                            "   'params': {'fpath': '/home/insatanic/_MyFolders/uptrain/uptrain-v1/examples/checks/qna-notebook-data.jsonl',\n",
-                            "    'batch_size': None}},\n",
-                            "  'preprocessors': [],\n",
-                            "  'checks': [{'name': 'Eval scores',\n",
-                            "    'operators': [{'op_name': 'uptrain.operators.language.model_grade:ModelGradeScore',\n",
-                            "      'params': {'grading_prompt_template': '\\n            You are an evidence-driven LLM that places high importance on supporting facts and references. You diligently verify claims and check for evidence within the document to ensure answers rely on reliable information and align with the documented evidence.\\n            \\n            You are comparing an answer pulled from the document for a given question\\n            Here is the data:\\n            [BEGIN DATA]\\n            ************\\n            [Document]: {document}\\n            ************\\n            [Question]: {user_query}\\n            ************\\n            [Submitted answer]: {generated_answer}\\n            ************\\n            [END DATA]\\n            \\n            Compare the factual content of the submitted answer with the document as well as evaluate how well it answers the given question. Ignore any differences in style, grammar, or punctuation.\\n            Answer the question by selecting one of the following options:\\n            \\n            (A) The submitted answer is a subset of the document and answers the question correctly.\\n            (B) The submitted answer is a subset of the document but is not an appropriate answer for the question.\\n            (C) The submitted quote is a superset of the document but is consistent with the document as well as answers the question correctly.\\n            (D) The submitted quote is a superset of the document but is consistent with the document although it does not answer the question correctly.\\n            (E) The submitted quote is a superset of the document and is not consistent with the document.\\n            ',\n",
-                            "       'eval_type': 'cot_classify',\n",
-                            "       'choice_strings': ['A', 'B', 'C', 'D', 'E'],\n",
-                            "       'choice_scores': {'A': 1.0, 'B': 0.2, 'C': 0.5, 'D': 0.1, 'E': 0.0},\n",
-                            "       'context_vars': {'document': 'document_text',\n",
-                            "        'user_query': 'question',\n",
-                            "        'generated_answer': 'answer'},\n",
-                            "       'col_out': 'custom_eval_score'}}],\n",
-                            "    'plots': []}],\n",
-                            "  'postprocessors': []},\n",
-                            " 'settings': {'logs_folder': '/tmp/uptrain-logs',\n",
-                            "  'cohere_api_key': 'xMybsNQgwu55qZnpN3l8DKLYvyAsj0UWKW6QgrC9',\n",
-                            "  'huggingface_api_key': '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',\n",
-                            "  'replicate_api_token': None,\n",
-                            "  'azure_api_key': None,\n",
-                            "  'azure_api_base': None,\n",
-                            "  'azure_api_version': None,\n",
-                            "  'rpm_limit': 100,\n",
-                            "  'tpm_limit': 90000,\n",
-                            "  'embedding_compute_method': 'local',\n",
-                            "  'uptrain_access_token': 'up-93de3cc6180540f6a02321eacbc66cd8',\n",
-                            "  'uptrain_server_url': 'https://demo.uptrain.ai',\n",
-                            "  'embedding_model_url': None,\n",
-                            "  'embedding_model_api_token': None,\n",
-                            "  'model': 'gpt-3.5-turbo-1106',\n",
-                            "  'seed': None,\n",
-                            "  'response_format': None},\n",
-                            " 'version': 5}"
-                        ]
-                    },
-                    "execution_count": 10,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
+            "outputs": [],
             "source": [
                 "from uptrain.framework import Check, CheckSet\n",
                 "from uptrain.operators import ModelGradeScore, OpenAIGradeScore, JsonReader\n",
