--- a/examples/checks/system_prompt_injection.ipynb
+++ b/examples/checks/system_prompt_injection.ipynb
@@ -382,7 +382,7 @@
     "res = uptrain_client.log_and_evaluate(\n",
     "    \"Sample-system-prompt-injection-evals\",\n",
     "    data,\n",
-    "    [Evals.CONTEXT_RELEVANCE]\n",
+    "    [Evals.PROMPT_INJECTION]\n",
     ")"
    ]
   },
