--- a/examples/integrations/llamaindex_integration_tutorial.ipynb
+++ b/examples/integrations/llamaindex_integration_tutorial.ipynb
@@ -194,6 +194,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e605559c",
+   "metadata": {},
+   "source": [
+    "## Perform the evaluation\n",
+    "\n",
+    "Now that we have the list of queries, we can use the EvalLlamaIndex object to generate responses for the queries and then perform evaluations on the responses. You can find an extensive list of the evaluations offered by UpTrain [here](https://docs.uptrain.ai/key-components/evals). We have chosen two that we found to be the most relevant for this tutorial:\n",
+    "\n",
+    "1. **Context Relevance**: This evaluation checks whether the retrieved context is relevant to the query. This is important because the retrieved context is used to generate the response. If the retrieved context is not relevant to the query, then the response will not be relevant to the query either.\n",
+    "\n",
+    "2. **Response Conciseness**: This evaluation checks whether the response is concise. This is important because the response should be concise and should not contain any unnecessary information.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "d68268ce-c626-4ec7-8956-8cebf00cf919",
